--- a/Website/templates/exercise_selection.html
+++ b/Website/templates/exercise_selection.html
@@ -25,7 +25,7 @@
   <div class="square-border">
     
     <div class="wrap">
-      <a href="vocabel-test"><img src="{{ url_for('static', filename='svg/pencil-alt-solid.svg') }}" class="square-picture"></a>
+      <a href="book-selections"><img src="{{ url_for('static', filename='svg/pencil-alt-solid.svg') }}" class="square-picture"></a>
         <div class="square-text">Vocabulary</div>  
     </div>
   </div>
