--- a/Website/static/style/performance.css
+++ b/Website/static/style/performance.css
@@ -35,12 +35,16 @@
     transform: scale(1.1);
   }
   
+h2{
+	padding-bottom: 10px;
+}
+
 
 @import url('https://rsms.me/inter/inter.css');
  :root {
-	 --color-light: #ffffff;
+	 --color-light: #39ac76c0;
 	 --color-dark: #000000;
-	 --color-signal: #328d7969;
+	 --color-signal: #bdbdbd;
 	 --color-background: var(--color-light);
 	 --color-text: var(--color-dark);
 	 --color-accent: var(--color-signal);
@@ -57,6 +61,8 @@
 
  h1, h2, h3 {
 	 font-weight: 900;
+
+
 }
  mark {
 	 background: var(--color-accent);
@@ -137,7 +143,12 @@
 	 border: none;
 	 border-radius: var(--size-radius);
 	 font-weight: 900;
-}
+ }
+
+ button::after{
+	box-shadow: 0 10px 18px rgba(0,0,0,0.25),0 10px 10px rgba(0,0,0,0.5);
+
+ }
  button[type=reset] {
 	 background: var(--color-background);
 	 font-weight: 200;
@@ -178,18 +189,20 @@ strong {
 header {
   display: flex;
   position: fixed;
-  width: 100%;
+  width: 100vw;
+  left: 0;
   height: 70px;
   background: #212121;
   color: #fff;
   justify-content: center;
   align-items: center;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
+  font-size: 
+  2rem;
 }
 
 
 #nav-container {
-  position: fixed;
   height: 100vh;
   width: 100%;
   pointer-events: none;
@@ -227,7 +240,7 @@ header {
   width: 30px;
   cursor: pointer;
   pointer-events: auto;
-  margin-left: 25px;
+  margin-left: 10px;
   touch-action: manipulation;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
@@ -280,7 +293,7 @@ header {
 }
 
 #nav-content li a {
-  padding: 10px 5px;
+	padding: 10px 5px;
   display: block;
   text-transform: uppercase;
   transition: color .1s;
@@ -305,7 +318,7 @@ header {
   color: #888;
 }
 .small a + a {
-  margin-left: 15px;
+	margin-left: 15px;
 }
 
 #nav-container:focus-within #nav-content {
