--- a/Website/templates/vocabulary.html
+++ b/Website/templates/vocabulary.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style/performance.css') }}">
     <title>Choose your exercise!</title>
-    <script>
-
-    </script>
 </head>
 <body>
     <img src="{{ url_for('static', filename='img/lowpoly-grey-gradient-vector.png') }}" class="background_image">
@@ -29,7 +26,7 @@
           </article>
 
           <div class="page">
-            <header tabindex="0">Header</header>
+            <header tabindex="0">English for IT-Jobs</header>
             <div id="nav-container">
               <div class="bg"></div>
               <div class="button" tabindex="0">
@@ -39,12 +36,9 @@
               </div>
               <div id="nav-content" tabindex="0">
                 <ul>
-                  <li><a href="#0">Home</a></li>
-                  <li><a href="#0">Services</a></li>
-                  <li><a href="#0">Blog</a></li>
-                  <li><a href="#0">About</a></li>
-                  <li><a href="#0">Contact</a></li>
-                  <li class="small"><a href="#0">Facebook</a><a href="#0">Instagram</a></li>
+                  <li><a href="home">Home</a></li>
+                  <li><a href="impressum.html">Impressum</a></li>
+                  <li><a href="exercise_selection">Exercise</a></li>
                 </ul>
               </div>
             </div>
