--- a/Website/templates/exercise_selection.html
+++ b/Website/templates/exercise_selection.html
@@ -27,7 +27,7 @@
 
   <div class="square-border">
       <div class="wrap">
-        <a href="selection"><img src="{{ url_for('static', filename='svg/pencil-alt-solid.svg') }}" alt="volume_up_icon" class="square-picture"></a>
+        <a href="vocabulary-sel"><img src="{{ url_for('static', filename='svg/pencil-alt-solid.svg') }}" alt="volume_up_icon" class="square-picture"></a>
           <div class="square-text">Vocabulary</div>  
       </div>
   </div>
