--- a/Website/static/style/test.css
+++ b/Website/static/style/test.css
@@ -1,64 +1,212 @@
-.square-border {
-    background-color: #e4e4e4;
-    box-shadow: 0 10px 18px rgba(0,0,0,0.25),0 10px 10px rgba(0,0,0,0.5);
-    border-width: 2px 2px 4px;
-    float:left;
-    position: relative;
-    width: 15%;
-    padding-bottom : 15%; /* = width for a 1:1 aspect ratio */
-    margin-left: 2vw;
-    overflow:hidden;
-    border: solid #000000;
-    border-radius: 25px;
-
-  }
-  .wrap{
-    position:absolute;
-    height:90%; /* = 100% - 2*5% padding */
-    width:90%; /* = 100% - 2*5% padding */
-    padding: 5%;
-    text-align:center;
-  }
- 
-  .square-text{
-    position: relative;
-    overflow: hidden;
-    color: black;
-    font-family:  Arial;
-    margin-top: 5px;
-    text-align: left;
-    
-  }
-  .square-picture{
-    width:auto;
-    height:auto;
-    max-height:60%;
-    max-width:70%;
-    margin-top: 3vh;
-    margin-left: 1vw;
-  }
-  .square-border:hover {
-    border-radius: 25px;
-    animation-duration: 1.0s;
-    box-shadow: 0 24px 38px rgba(0,0,0,0.25),0 20px 20px rgba(0,0,0,0.5);
-    background-color: #379984;
-  }
-  
-  div.example {
-    font-size: 80px;
+*{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
-@media screen and (min-width: 601px) {
-    .square-text {
-      font-size: 20px;
-    }
-  }
-  
-  /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
-  @media screen and (max-width: 1100px) {
-    .square-text {
-      font-size: 10px;
-    }
-  }
+.background_image{
+  height: 100vh;
+  width: 100vw;
+  background-repeat: no-repeat;
+  z-index: -999;
+  position: fixed;
+  filter: blur(12px);
+  overflow: hidden;
+  background-size: cover;
+  transform: scale(1.1);
+}
 
+
+
+
+/* Footer */
+.footer{
+  left: 0;
+  width: 100vw;
+  height: 5vh;
+  border: solid black 1px;
+  overflow: hidden;
+  position: fixed;
+  top: 95vh;
+  text-align: center;
+  backdrop-filter: blur(15px);
+}
+
+/*Buttons*/
+hr {
+  border: 0;
+  border-bottom: 0.0625rem solid #bbb;
+  margin: 3rem 0;
+}
+button {
+  font-size: 2em;
+  background: #379984;
+  color: #fff;
+  border: none;
+  padding: 0.5em 0.7em;
+  position: fixed;
+  z-index: 1;
+  overflow: hidden;
+  border-radius: 15px;
+  margin-top: 2vh;
+  cursor: pointer;
+  
+}
+button:hover {
+  color: #fff;
+}
+button::after {
+  content: "";
+  background: #234f9b;
+  position: absolute;
+  z-index: -1;
+  padding: 0.85em 0.75em;
+  display: block;
+}
+button[class^="slide"]::after {
+  transition: all 0.7s;
+}
+button[class^="slide"]:hover::after {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  transition: all 0.7
+  s;
+}
+button.slide_from_left::after {
+  top: 0;
+  bottom: 0;
+  left: -100%;
+  right: 100%;
+}
+button.slide_from_right::after {
+  top: 0;
+  bottom: 0;
+  left: 100%;
+  right: -100%;
+}
+
+/*Impressum*/
+
+.impressum{
+  text-decoration: none;
+  color: black;
+  position: fixed;
+  bottom: 33%;
+}
+
+.button_wrapper{
+height: auto
+}
+
+/* Title */
+
+
+
+
+@keyframes typing {
+  from {
+    width: 0
+  }
+}
+    
+@keyframes blink {
+  50% {
+    border-color: transparent
+  }
+}
+
+
+/* ----------------------------------- */
+.square-border {
+  background-color: #e4e4e4;
+  box-shadow: 0 10px 18px rgba(0,0,0,0.25),0 10px 10px rgba(0,0,0,0.5);
+  border-width: 2px 2px 4px;
+  position: relative;
+  width: 15%;
+  padding-bottom : 15%; /* = width for a 1:1 aspect ratio */
+  border: solid #000000;
+  border-radius: 25px;
+
+  margin: 1%;
+
+}
+
+
+.selection_text{
+
+}
+.square-picture{
+  width:auto;
+  height:auto;
+  max-height:60%;
+  max-width:70%;
+  margin-top: 3vh;
+  margin-left: 1vw;
+}
+.square-border:hover {
+  border-radius: 25px;
+  animation-duration: 1.0s;
+  box-shadow: 0 24px 38px rgba(0,0,0,0.25),0 20px 20px rgba(0,0,0,0.5);
+  background-color: #379984;
+}
+
+div.example {
+  font-size: 80px;
+}
+
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px 
+@media screen and (min-width: 601px) {
+  .square-text {
+    font-size: 20px;
+  }
+}
+
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px 
+@media screen and (max-width: 1100px) {
+  .square-text {
+    font-size: 10px;
+  }
+}
+*/
+
+#page{
+
+  position: absolute;
+top: 25%;
+}
+
+header {
+  background-color: lime;
+  display: flex;
+  height: 70px;
+  justify-content: center;
+  width: 100vw;
+
+}
+main {
+  background-color: yellow;
+  display: flex;
+  position: relative;
+  width: 100vw;
+ justify-content: center;
+
+}
+
+.typing-demo {
+  animation: typing 1.5s steps(22), blink .6s step-end infinite alternate;
+  white-space: nowrap;
+  position: absolute;
+  display: flex;
+  height: auto;
+  font-size: 3rem;
+  color: white;
+  text-shadow: 
+    1px 1px 1px #000000,
+    1px 1px 1px #000000,
+    1px 2px 1px #000000,
+    1px 3px 1px #000000,
+        1px 16px 4px rgba(16,16,16,0),
+        1px 20px 8px rgba(16,16,16,0),
+        1px 23px 33px rgba(16,16,16,0),
+        1px 39px 58px rgba(16,16,16,0);
+}
