--- a/Website/templates/home.html
+++ b/Website/templates/home.html
@@ -15,7 +15,7 @@
       
     <div class="info" >
 <div class="wrapper">
-    <a class="cta" href="exercise_selection">
+    <a class="cta" href="exercise-selection">
       <span>Start!</span>
       <span>
         <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" >
