--- a/Website/templates/exercise_selection.html
+++ b/Website/templates/exercise_selection.html
@@ -34,7 +34,7 @@
   
   <div class="square-border">
     <div class="wrap">
-      <a href=""><img src="{{ url_for('static', filename='svg/volume-up-solid.svg') }}" alt="volume_up_icon" class="square-picture"></a> 
+      <a href="audio"><img src="{{ url_for('static', filename='svg/volume-up-solid.svg') }}" alt="volume_up_icon" class="square-picture"></a> 
         <div class="square-text">Text to Speech</div>
     </div>
   </div>
