--- a/Website/templates/home.html
+++ b/Website/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/startpage.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style/startpage.css') }}">
     <title>Welcome!</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
       
     <div class="info" >
 <div class="wrapper">
-    <a class="cta" href="exercise-selection">
+    <a class="cta" href="exercise_selection">
       <span>Start!</span>
       <span>
         <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" >
