--- a/Website/templates/vocabulary.html
+++ b/Website/templates/vocabulary.html
@@ -7,7 +7,7 @@
     <title>Choose your exercise!</title>
 </head>
 <body>
-    <img src="{{ url_for('static', filename='img/lowpoly-grey-gradient-vector.png') }}" class="background_image">
+    <img src="{{ url_for('static', filename='img/lowpoly-grey-gradient-vector.png') }}" alt="background_vocabulary" class="background_image">
         <article class="l-design-widht">        
             <div class="card">
                 <h1>Vocabulary test</h1>  
@@ -37,7 +37,7 @@
               <div id="nav-content" tabindex="0">
                 <ul>
                   <li><a href="home">Home</a></li>
-                  <li><a href="impressum.html">Impressum</a></li>
+                  <li><a href="impressum">Impressum</a></li>
                   <li><a href="exercise_selection">Exercise</a></li>
                 </ul>
               </div>
