--- a/Website/static/style/selection.css
+++ b/Website/static/style/selection.css
@@ -122,19 +122,17 @@ height: auto
   box-shadow: 0 10px 18px rgba(0,0,0,0.25),0 10px 10px rgba(0,0,0,0.5);
   border-width: 2px 2px 4px;
   position: relative;
-  width: 15%;
   padding-bottom : 15%; /* = width for a 1:1 aspect ratio */
   border: solid #000000;
   border-radius: 25px;
-
   margin: 1%;
+  max-height: 5vh;
+  min-width: 10vw;
 
 }
 
 
-.selection_text{
 
-}
 .square-picture{
   width:auto;
   height:auto;
@@ -189,6 +187,7 @@ main {
   position: relative;
   width: 100vw;
  justify-content: center;
+
 
 }
 
