--- a/Website/templates/vocabulary.html
+++ b/Website/templates/vocabulary.html
@@ -38,7 +38,7 @@
                 <ul>
                   <li><a href="home">Home</a></li>
                   <li><a href="impressum">Impressum</a></li>
-                  <li><a href="exercise_selection">Exercise</a></li>
+                  <li><a href="exercise-selection">Exercise</a></li>
                 </ul>
               </div>
             </div>
