--- a/Website/templates/vocabulary.html
+++ b/Website/templates/vocabulary.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style/performance.css') }}">
+    <script src="{{ url_for('static', filename='js/check.js') }}"></script>
     <title>Choose your exercise!</title>
 </head>
 <body>
@@ -14,14 +15,12 @@
               <div class="card card--accent">
               <h2> <img src="{{ url_for('static', filename='svg/12837215941548336240.svg') }}" alt="svg" class="icon">{{word}}</h2>
               <label class="input">
-                <input class="input__field" type="text" placeholder=" " />
+                <input id="input_field" type="text" placeholder=" " />
                 <span class="input__label">{{trans_lang}} word</span>
               </label>
               
               <div class="button-group">
-                <a href="vocabulary">
-                  <button>Check</button>
-                </a>
+                <button id="check">Check</button>
                 <button type="reset">Reset</button>
               </div>
             </div>
