--- a/Website/templates/selection.html
+++ b/Website/templates/selection.html
@@ -1,57 +1,155 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/selection.css') }}">
-    <script src="{{ url_for('static', filename='js/readfile.js') }}"></script>
-    <title>Choose your exercise!</title>
-    <script>
+<html lang='en'>
+    <head>
+        <title>Interaktives Englischlernen</title>
+        <meta charset="utf-8">
 
-    </script>
-</head>
-<body>
-<img src="{{ url_for('static', filename='img/lowpoly-grey-gradient-vector.png') }}" alt="background_exerciseSelection" alt="background_exerciseSelection" class="background_image">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="{{ url_for('static', filename='style/selection.css') }}" rel="stylesheet">
 
-<section class="page">
-  
-  <header> 
-    <div class="typing-demo">Choose your {{headline}}</div> 
-  </header>
+        <!-- Bootstrap CSS -->
+        <link href="{{ url_for('static', filename='style/bootstrap.min.css') }}" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        
+        <!-- Scripts -->
+        <script src="{{ url_for('static', filename='js/selection.js') }}"></script>
+        {% if selection_type == "vocabulary" or selection_type == "audio" %}
+            <script src="{{ url_for('static', filename='js/util.js') }}"></script>
+        {% endif %}
+    </head>
 
-  <main id="main">
-    {%for i in range(num)%}
-      <div class="square-border">
-          <div class="selection_text">{{namelist[i]}}</div>  
-      </div> 
-    {% endfor %}   
-  </main>
-  <main id="main2"></main>
-</section>
-<!--
-<div class="box_center">
+    <body>
+        <div id="headline" class="container-fluid">
+            <h1 class="text-center display-1 pt-5 pb-5">{{headline}}</h1>
+        </div>
 
-  <div class="wrapper">
-     <div class="typing-demo">
-      Choose your topic.
-    </div> 
-  </div>
-
-  <div class="wrapper2">
-
-  </div>   
-</div>      
--->
+        <div class="container-xl">
+            <div class="row justify-content-center content-table">
+                {% if selection_type == "book" %}
+                {% for i in range(num) %}
+                <div class="col-xl-2 col-md-4 col-sm-6 col-xs-12 mt-3">
+                    <a href="#">
+                        <div class="position-relative border border-2 border-secondary selection-switch shadow">
+                            <input class="form-check-input position-absolute" type="checkbox" value="">
+                            <h3 class="position-absolute text-dark text-center start-50 top-50 w-100 translate-middle">{{namelist[i]}}</h3>
+                        </div>
+                    </a>
+                </div>
+                {% endfor %}
+                {% endif %}
 
 
+                {% if selection_type == "topic_unit" %}
+                {% for i in range(num) %}
+                <div class="col-xl-2 col-md-4 col-sm-6 col-xs-12 mt-3">
+                    <a href="#">
+                        <div class="position-relative border border-2 border-secondary selection-switch shadow">
+                            <input class="form-check-input position-absolute" type="checkbox" value="">
+                            <h3 class="position-absolute text-dark text-center start-50 top-50 w-100 translate-middle">{{namelist[i]}}</h3>
+                        </div>
+                    </a>
+                </div>
+                {% endfor %}
+                {% endif %}
 
 
+                {% if selection_type == "language" %}
+                {% for i in range(num) %}
+                <div class="col-xl-2 col-md-4 col-sm-6 col-xs-12 mt-3">
+                    <a href="#">
+                        <div class="position-relative border border-2 border-secondary selection-switch shadow">
+                            <input class="form-check-input position-absolute" type="checkbox" value="">
+                            <h3 class="position-absolute text-dark text-center start-50 top-50 w-100 translate-middle">{{namelist[i]}}</h3>
+                        </div>
+                    </a>
+                </div>
+                {% endfor %}
+                {% endif %}
 
-<div class="footer">
-  <a href="impressum" class="impressum">Impressum</a>
-</div>
-  
-  
 
-</body>
+                {% if selection_type == "amount" %}
+                <div class="col-md-6 col-sm-12 border border-2 border-secondary range-selection">
+                    <label for="customRange1" class="form-label display-6" data-text="Dein Text"></label>
+                    <input type="range" class="form-range" min="1" max="{{amount}}" step="1" value="10" id="customRange1">
+                </div>
+                {% endif %}
+
+
+                {% if selection_type == "vocabulary" %}
+                <div class="col-md-6 col-sm-12 border border-2 border-secondary text-selection">
+                    <label for="controlTextarea1" class="form-label display-6 pb-3">{{word}}</label>
+                    <textarea class="form-control mb-3 border-secondary" id="controlTextarea1" rows="3" style="resize: none;"></textarea>
+                </div>
+                {% endif %}
+
+
+                {% if selection_type == "audio" %}
+                <div class="col-md-6 col-sm-12 border border-2 border-secondary text-selection">
+                    <label for="controlTextarea1" class="form-label display-6 pb-3">{{word}}</label>
+                    <textarea class="form-control mb-3 border-secondary" id="controlTextarea1" rows="3" style="resize: none;"></textarea>
+                </div>
+                {% endif %}
+
+                <!--
+                Sentence construction
+                
+                <div class="col-md-6 col-sm-12 border border-2 border-secondary text-construction pb-2">
+                    <p class="display-6" data-words="Wir sind ein mittelständisches Unternehmen in der IT-Branche">We are a medium-sized company in the IT sector</p>
+                </div>
+                -->
+
+                <!--
+                Textarea
+
+                <div class="col-md-6 col-sm-12 border border-2 border-secondary text-selection">
+                    <label for="controlTextarea1" class="form-label display-6 pb-3">to maintain</label>
+                    <textarea class="form-control mb-3 border-secondary" id="controlTextarea1" rows="3" style="resize: none;"></textarea>
+                </div>
+                -->
+                
+                <!--
+                Range
+                
+                <div class="col-md-6 col-sm-12 border border-2 border-secondary range-selection">
+                    <label for="customRange1" class="form-label display-6" data-text="Dein Text"></label>
+                    <input type="range" class="form-range" min="1" max="729" step="1" value="10" id="customRange1">
+                </div>
+                -->
+                
+                <!--
+                Checkbox
+
+                <div class="col-xl-2 col-md-4 col-sm-6 col-xs-12 mt-3">
+                    <a href="#">
+                        <div class="position-relative border border-2 border-secondary selection-switch shadow">
+                            <input class="form-check-input position-absolute" type="checkbox" value="">
+                            <h3 class="position-absolute text-dark text-center start-50 top-50 w-100 translate-middle">Dein Text</h3>
+                        </div>
+                    </a>
+                </div>
+                -->
+            </div>
+        </div>
+
+        <footer class="container-xl bottom-0 pt-5 mt-5">
+            <div class="row justify-content-center">
+                <div class="position-relative col-sm-6 col-xs-12">
+                    <a class="position-absolute w-25 text-center start-50 translate-middle-x" href='home'>
+                        <div class="position-relative border border-2 border-success shadow-lg function-button">
+                            <h4 class="text-dark">Home</h4>
+                        </div>
+                    </a>
+                </div>
+                <div class="position-relative col-sm-6 col-xs-12">
+                    <a class="position-absolute w-25 text-center start-50 translate-middle-x" id="checkButton" href='{{href}}'>
+                        <div class="position-relative border border-2 border-success shadow-lg function-button">
+                            <h4 class="text-dark">{% if selection_type == "vocabulary" %} Check {% else %} Continue {% endif %}</h4>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </footer>
+
+        <!-- Option 1: Bootstrap Bundle with Popper -->
+        <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    </body>
 </html>
