--- a/Website/templates/selection.html
+++ b/Website/templates/selection.html
@@ -69,7 +69,7 @@
 
                 {% if selection_type == "amount" %}
                 <div class="col-md-6 col-sm-12 border border-2 border-secondary range-selection">
-                    <label for="customRange1" class="form-label display-6" data-text="Dein Text"></label>
+                    <label for="customRange1" class="form-label display-6" data-text="Amount"></label>
                     <input type="range" class="form-range" min="1" max="{{amount}}" step="1" value="{{10 if amount >= 10 else amount}}" id="customRange1">
                 </div>
                 {% endif %}
@@ -141,7 +141,7 @@
         <footer class="container-xl bottom-0 pt-5 mt-5">
             <div class="row justify-content-center">
                 <div class="position-relative col-sm-6 col-xs-12">
-                    <a class="position-absolute w-25 text-center start-50 translate-middle-x" href='home'>
+                    <a class="position-absolute w-25 text-center start-50 translate-middle-x" href=''>
                         <div class="btn position-relative btn-outline-success border border-success shadow-lg btn-lg">
                             Home
                         </div>
